--- a/src/assets/sass/paper/_inputs.scss
+++ b/src/assets/sass/paper/_inputs.scss
@@ -16,7 +16,9 @@
 
 .form-control {
   background-color: $gray-input-bg;
-  border: medium none;
+  border: mediu
+  
+  m none;
   border-radius: $border-radius-base;
   color: $font-color;
   font-size: $font-size-base;
