configuracion de tabla preguntar

--- a/src/assets/sass/paper/_cards.scss
+++ b/src/assets/sass/paper/_cards.scss
@@ -240,6 +240,9 @@
   }
 }
 
+.cars.P{
+ padding:20% ;
+}
 .card-plain {
   background-color: transparent;
   box-shadow: none;
@@ -248,4 +251,5 @@
   .image {
     border-radius: 4px;
   }
+
 }
