--- a/src/assets/sass/paper/_buttons.scss
+++ b/src/assets/sass/paper/_buttons.scss
@@ -205,6 +205,10 @@
 .btn-group.select{
   overflow: visible !important;
 }
+.BP{
+  margin-left:76%;
+  margin-top: 1%;
+}
 .media{
   .media-body{
     .media-footer{
