preguntar danier 22 del 03 2023

--- a/src/assets/sass/paper/_buttons.scss
+++ b/src/assets/sass/paper/_buttons.scss
@@ -206,8 +206,17 @@
   overflow: visible !important;
 }
 .BP{
-  margin-left:76%;
+  margin-left:61%;
   margin-top: 1%;
+}
+.Editar{
+  margin-left: 74px;
+  margin-top: 5px;
+  
+}
+.Responder{
+  margin-left: 85px;
+margin-top: 5x;
 }
 .media{
   .media-body{
