--- a/src/assets/sass/paper/_variables.scss
+++ b/src/assets/sass/paper/_variables.scss
@@ -220,7 +220,7 @@ $select-coordinates: 50% -40px !default;
 $padding-zero: 0px !default;
 
 $sidebar-width: calc(100% - 260px) !default;
-$medium-dark-gray: #AAAAAA !default;
+$medium-dark-gray: #aaaaaa !default;
 
 //variables used in cards
 $card-black-color: #252422 !default;
